# linkedin-cli

./: .gitignore  README.md  pyproject.toml
skills/linkedin/: SKILL.md
src/linkedin_cli/: __init__.py  browser.py  main.py  scraper.py
