[project]
name = "linkedin-cli"
version = "0.1.0"
description = "LinkedIn analytics CLI — post impressions, reactions, and profile viewers via browser automation"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [{ name = "Fabio Bernasconi" }]
keywords = ["linkedin", "analytics", "cli", "impressions", "profile-views"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Utilities",
]
dependencies = [
    "patchright",
    "click",
    "rich",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
linkedin = "linkedin_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_cli"]
